# family_office

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  main.py  plan.md  pyproject.toml
alembic/: env.py
alembic/versions/: be918da0252e_initial_schema.py  d00e582a983c_add_earnings_date_and_calendar_event_.py
app/: auth.py  cedar_authz.py  config.py  database.py  dependencies.py  models.py  schemas.py
app/policies/: policies.cedar  schema.cedarschema
app/routers/: auth.py  calendar.py  portfolios.py  users.py
app/services/: google_calendar.py  market_data.py
notes/: README.md  notes.md
tests/: conftest.py  test_auth.py  test_portfolios.py
web/: .env  .env.production  .gitignore  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/lib/: api.ts
web/src/pages/: Login.tsx  Portfolio.tsx
web/src/types/: api.d.ts
